Fixing white space

--- a/party-game-ui/src/App.css
+++ b/party-game-ui/src/App.css
@@ -282,6 +282,7 @@ body {
 .question {
   font-size: calc(10px + 4vmin);
   padding: 4%;
+  white-space: pre-wrap;
 }
 
 .answer {
